--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,7 @@
     <div class="message-box">
       <div id="display-messages"></div>
       <div id="bottom-container">
+        <input type="text" id="user-name" required />
         <input type="text" id="send-message" />
         <button type="button" id="send">Send</button>
       </div>
