--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,12 +6,15 @@
     <title>Chat Application</title>
     <link rel="stylesheet" href="style.css" />
   </head>
+  <div id="title-div">
+    <h1>Long-polling</h1>
+  </div>
   <body>
     <div class="message-box">
       <div id="display-messages"></div>
       <div id="bottom-container">
-        <input type="text" id="user-name" required />
-        <input type="text" id="send-message" />
+        <input type="text" id="user-name" required placeholder="username" />
+        <input type="text" id="send-message" placeholder="message" />
         <button type="button" id="send">Send</button>
       </div>
     </div>
