--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chat Application</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="home.css" />
   </head>
-  <div id="title-div">
-    <h1>Long-polling</h1>
-  </div>
   <body>
-    <div class="message-box">
-      <div id="display-messages"></div>
-      <div id="bottom-container">
-        <input type="text" id="user-name" required placeholder="username" />
-        <input type="text" id="send-message" placeholder="message" />
-        <button type="button" id="send">Send</button>
+    <div class="container">
+      <h1>Real-Time Chat Application</h1>
+      <p>Select the implementation to explore:</p>
+
+      <div class="cards">
+        <a href="polling.html" class="card">
+          <h2>🔄 Long Polling</h2>
+        </a>
+
+        <a href="websocket.html" class="card">
+          <h2>⚡ WebSocket</h2>
+        </a>
       </div>
     </div>
-    <script src="script.js"></script>
   </body>
 </html>
